--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -3,6 +3,16 @@
 {% block content %}
 
 <h1>Hellow shahil lamia world</h1>
+<br/>
+{{ api.0}}<br/><br/>
+
+Air Quality:  {{ api.0.AQI}}<br/>
+
+Area: {{ api.0.ReportingArea}}<br/>
+
+Category: {{ api.0.Category.Name}}<br/>
+
+
 
 {% endblock %}
 
